# lcd-screen-piface

./: LICENSE  Makefile  README.md  pager_example.py  requirements.txt  setup.cfg  setup.py  simple_pager_example.py
examples/: Makefile  requirements.txt
examples/pager/: pager_example.py
lcd_control/: lcd_worker.py  piface_controller.py
lcd_control/hw/: lcd_interface.py  pifacecad_interface.py
pager/: README.md  __init__.py  core.py  page.py  page_controller.py  pager_example.py  screen.py  timer_functions.py
simple_pager/: __init__.py  core.py  lcd_worker.py  page.py  piface_controller.py  queued_piface_controller.py  simple_pager_example.py  test.py
simple_pager/hw/: lcd_interface.py  pifacecad_interface.py
src/: requirements-dev.txt
src/lcd_control/: lcd_worker.py  piface_controller.py
src/lcd_control/hw/: dummy_lcd_interface.py  lcd_interface.py  pifacecad_interface.py
src/pager/: README.md  page.py  page_controller.py
