[metadata]
name = lcd-screen-piface
version = 1.0.0
author = Maarten Joosten
author_email = mh.joosten666@gmail.com
description = A higher level API for a Piface CAD 2 LCD module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keigezellig/lcd-screen-piface
project_urls =
    Bug Tracker = https://github.com/keigezellig/lcd-screen-piface/issues
classifiers =
    Programming Language :: Python :: 3.7
    Development Status :: 5 - Production/Stable    
    Operating System :: POSIX :: Linux
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src